# SF2ML

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  info_manager.cpp  info_manager.hpp  instrument_manager.cpp  instrument_manager.hpp  main.cpp  preset_manager.cpp  preset_manager.hpp  sample_manager.cpp  sample_manager.hpp  sfhandle.hpp  sfinfo.cpp  sfinfo.hpp  sfinstrument.cpp  sfinstrument.hpp  sfinstrumentzone.cpp  sfinstrumentzone.hpp  sflib.cpp  sflib.hpp  sfmap.hpp  sfpreset.cpp  sfpreset.hpp  sfpresetzone.cpp  sfpresetzone.hpp  sfsample.cpp  sfsample.hpp  sfspec.hpp  sfzone.cpp  sfzone.hpp  wavspec.hpp
catch2/: CMakeLists.txt  codegen.cpp  main.cpp  test.cpp
catch2/sf2src/: SF2ML_TEST1.sf2  SF2ML_TEST2.sf2
cmake/: Installing.cmake
example/: CMakeLists.txt  main.cpp
include/: sf2ml.hpp  sfgenerator.hpp  sfhandle.hpp  sfhandleinterface.hpp  sfinfo.hpp  sfinstrument.hpp  sfinstrumentzone.hpp  sflib.hpp  sfmodulator.hpp  sfpreset.hpp  sfpresetzone.hpp  sfsample.hpp  sfspec.hpp  sftypes.hpp  wavspec.hpp
src/: instrument_manager.cpp  instrument_manager.hpp  preset_manager.cpp  preset_manager.hpp  sample_manager.cpp  sample_manager.hpp  sf2ml.cpp  sfcontainers.hpp  sfhandleinterface.hpp  sfinfo.cpp  sfinstrument.cpp  sfinstrumentzone.cpp  sflib.cpp  sfloader.cpp  sfloader.hpp  sfmap.cpp  sfmap.hpp  sfmodulator.cpp  sfpreset.cpp  sfpresetzone.cpp  sfsample.cpp  sfserializer.cpp  sfserializer.hpp  sftypes.cpp  wav_utility.cpp
